<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.rccookie</groupId>
  <artifactId>advent-of-code-runner</artifactId>
  <version>1.10.1</version>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>rccookie.de</id>
      <url>https://mvn.repo.rccookie.de/releases</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>de.rccookie</groupId>
      <artifactId>http</artifactId>
      <version>1.58.1</version>
    </dependency>
    <dependency>
      <groupId>de.rccookie</groupId>
      <artifactId>xml</artifactId>
      <version>0.3.2.0</version>
    </dependency>
    <dependency>
      <groupId>de.rccookie</groupId>
      <artifactId>graph</artifactId>
      <version>0.8.1</version>
    </dependency>
    <dependency>
      <groupId>de.rccookie</groupId>
      <artifactId>util</artifactId>
      <version>1.31.5.0</version>
    </dependency>
    <dependency>
      <groupId>de.rccookie</groupId>
      <artifactId>math</artifactId>
      <version>1.17.1</version>
    </dependency>
    <dependency>
      <groupId>de.rccookie</groupId>
      <artifactId>json</artifactId>
      <version>6.13.0</version>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.0.4</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <repository>
      <id>rccookie.de</id>
      <url>https://mvn.repo.rccookie.de/releases</url>
    </repository>
  </distributionManagement>

</project>
